syntax = "proto3";
package Protocol;
option optimize_for = SPEED;

// https://developers.google.com/protocol-buffers/docs/proto3?hl=zh-cn#simple
// https://www.npmjs.com/package/google-protobuf


// 预定义
// Daemon 元数据
message DaemonMeta{
  string Version=1;//版本
  string WorkDirectory=2;//工作目录
  uint32 HostCpuCores=3;//主机核心数量
  uint64 HostMemorySize=4;//主机内存字节数
  uint32 ProcessId=5;//进程Id
}
// Daemon 状态
message DaemonStatus{
  float ProcessTimePercentage=1;//进程CPU百分比
  uint64 ProcessWorkingSetSize=2;//进程内存占用字节
  uint32 UnitSettingsCount=3;//托管单元数量
  uint32 UnitProcessCount=4;//托管单元运行数量
}
// Unit 配置
message UnitSettings{
  string Name=1;//单元名称
  string Description=2;//单元描述
  string ExecuteAbsolutePath=3;//单元可执行文件绝对路径
  string WorkAbsoluteDirectory=4;//单元工作绝对目录
  string ExecuteParams=5;//可执行文件参数
  bool AutoStart=6;//单元是否自启,默认不自启
  uint32 AutoStartDelay=7;//单元自启延迟(秒),默认10秒
  bool DaemonProcess=8;//守护进程
  bool HaveChildProcesses=9;//单元进程是否派生子进程
}
// Unit 进程
message UnitProcess{
  string Name=1;//单元名称
  uint32 State=2;//单元状态
  uint32 ProcessId=3;//单元进程Id
}
// Daemon 托管单元状态
message UnitStatus{
  string UnitName=1;
  UnitSettings UnitSettings=2;
  UnitProcess UnitProcess=3;
}

// 1xxx 代表客户端=>服务端
// 2xxx 代表服务端=>客户端
// 此项用于预先测试数据包类型
message WebSocketPacketTest{
  uint32 Type=1;
}

// Type 2001
// 服务端响应客户端链接事件,并回复给客户端
message WebSocketServerResponseAfterOnOpen{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string HelloMessage=3;
}

// Type 1002
// 客户端向服务端请求验证ControlKey
message WebSocketClientRequestValidateControlKey{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string ControlKey=3;
}
// Type 2002
// 服务端回复客户端ControlKey验证结果
message WebSocketServerResponseValidateControlKey{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool Validation=3;
  string ValidationMessage=4;
}

// Type 1003
// 客户端向服务端请求Daemon元数据
message WebSocketClientRequestFetchDaemonMeta{
  uint32 Type=1;
  string ClientConnectionGuid=2;
}
// Type 2003
// 服务端回复客户端Daemon元数据
message WebSocketServerResponseFetchDaemonMeta{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  DaemonMeta DaemonMeta=3;
}

// Type 1004
// 客户端向服务端请求Daemon状态
message WebSocketClientRequestFetchDaemonStatus{
  uint32 Type=1;
  string ClientConnectionGuid=2;
}
// Type 2004
// 服务端回复客户端Daemon状态
message WebSocketServerResponseFetchDaemonStatus{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  DaemonStatus DaemonStatus=3;
}

// Type 1005
// 客户端向服务端请求所有单元状态
message WebSocketClientRequestFetchUnitsStatus{
  uint32 Type=1;
  string ClientConnectionGuid=2;
}
// Type 2005
// 服务端回复客户端所有单元状态
message WebSocketServerResponseFetchUnitsStatus{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  repeated UnitStatus UnitStatus=3;
}

// Type 1006
// 客户端向服务端请求指定单元状态
message WebSocketClientRequestFetchUnitStatus{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
}
// Type 2006
// 服务端回复客户端指定单元状态
message WebSocketServerResponseFetchUnitStatus{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
  UnitStatus UnitStatus=4;
}

// Type 1007
// 客户端向服务端请求重载所有单元配置
message WebSocketClientRequestReloadUnitsSettings{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool RestartIfUpdate=3;
}
// Type 2007
// 服务端回复客户端重载所有单元配置
message WebSocketServerResponseReloadUnitsSettings{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool RestartIfUpdate=3;
  bool Executed=4;
}

// Type 1008
// 客户端向服务端请求重载指定单元配置
message WebSocketClientRequestReloadUnitSettings{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool RestartIfUpdate=3;
  string UnitName=4;
}
// Type 2008
// 服务端回复客户端重载指定单元配置
message WebSocketServerResponseReloadUnitSettings{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool RestartIfUpdate=3;
  string UnitName=4;
  bool Executed=5;
}

// Type 1009
// 客户端向服务端请求启动所有单元
message WebSocketClientRequestStartUnits{
  uint32 Type=1;
  string ClientConnectionGuid=2;
}
// Type 2009
// 服务端回复客户端启动所有单元
message WebSocketServerResponseStartUnits{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool Executed=3;
}

// Type 1010
// 客户端向服务端请求启动指定单元
message WebSocketClientRequestStartUnit{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
}
// Type 2010
// 服务端回复客户端启动指定单元
message WebSocketServerResponseStartUnit{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
  bool Executed=4;
}

// Type 1011
// 客户端向服务端请求停止所有单元
message WebSocketClientRequestStopUnits{
  uint32 Type=1;
  string ClientConnectionGuid=2;
}
// Type 2011
// 服务端回复客户端停止所有单元
message WebSocketServerResponseStopUnits{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  bool Executed=3;
}

// Type 1012
// 客户端向服务端请求停止指定单元
message WebSocketClientRequestStopUnit{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
}
// Type 2012
// 服务端回复客户端停止指定单元
message WebSocketServerResponseStopUnit{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
  bool Executed=4;
}

// Type 2013
// 服务端通知所有客户端指定单元被重载
message WebSocketServerNotifyClientsThatUnitSettingsReload{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
  UnitSettings UnitSettings=4;
}

// Type 2014
// 服务端通知所有客户端指定单元已启动
message WebSocketServerNotifyClientsThatUnitStarted{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
  UnitProcess UnitProcess=4;
}

// Type 2015
// 服务端通知所有客户端指定单元已停止
message WebSocketServerNotifyClientsThatUnitStopped{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
}

// Type 2016
// 服务端通知所有客户端指定单元启动失败
message WebSocketServerNotifyClientsThatUnitStartFailed{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
}

// Type 2017
// 服务端通知所有客户端指定单元停止失败
message WebSocketServerNotifyClientsThatUnitStopFailed{
  uint32 Type=1;
  string ClientConnectionGuid=2;
  string UnitName=3;
}